# ai-bot

./: .editorconfig  .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: main.py
src/ai/: answer_generator.py
src/app/: dispatcher_builder.py  gather_routers.py
src/app/dp_settings/: __init__.py  lifetime.py  redis_storage.py
src/app/handlers/: command.py  message.py
src/app/utils/: requests.py  states.py
src/config/: loader.py  reader.py
