[tool.poetry]
name = "ai-bot"
version = "0.1.0"
description = ""
authors = ["Georgiy Vasin <georgijvasin01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
mistralai = "^1.1.0"
aiogram = "3.0"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
