[tool.poetry]
package-mode = false
name = "ai-bot"
version = "0.1.0"
authors = ["Georgiy Vasin <georgijvasin01@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mistralai = "^1.1.0"
pydantic-settings = "^2.5.2"
aiogram = "^3.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
